[NewFeat][Q5] add new payment API
